@@ -1426,6 +1426,7 @@ extern int _pSLang_get_frame_depth (void);
 
 #if SLANG_HAS_FLOAT
 extern int _pSLmath_isnan (double x);
+extern int _pSLmath_isinf (double x);
 extern double _pSLang_NaN;
 extern double _pSLang_Inf;
 #endif
