@@ -381,5 +381,13 @@ define test_char (c, s)
 test_char (-0x78, "\x78");
 test_char (-0xAB, "\xAB");
 
+#ifexists Double_Type
+_for $1 (0, 400, 1)
+{
+   () = sprintf ("%f", 10^$1);
+}
+#endif
+	 
+	 
 print ("Ok\n");
 exit (0);
